--- a/css/_detail.scss
+++ b/css/_detail.scss
@@ -7,22 +7,22 @@
 	padding-top: 58px;
 	min-height: 100%;
 	@include vendorize(transition, opacity 0.3s);
-	@media only screen and (max-width: 1024px), screen and (min-device-width : 768px) and (max-device-width : 1024px)  {
+	@media (max-width: 1024px)  {
 		width: 90%;
 		margin-left: 5%;
 	}
 
 
 	.rbma-radio-picks{
-		font-size: 2em;
+		font-size: 1.5em;
 		border-bottom: 5px solid black;
-		width: 100%;
-		margin-left: 10%;
-		@media only screen and (max-width: 1024px), screen and (min-device-width : 768px) and (max-device-width : 1024px)  {
+		width: 90%;
+		margin-left: 20%;
+		@media (max-width: 1024px){
 			width: 90%;
 			margin-left: 5%;
 		}
-		@media only screen and (max-width: 767px), screen and (min-device-width : 320px) and (max-device-width : 767px) {
+		@media (max-width: 767px){
 			font-size: 1.5em;
 		}
 
@@ -37,12 +37,12 @@
 	.author{
 		font-size: 4em;
 		margin: 0;
-		margin-left: 10%;
-		@media only screen and (max-width: 1024px), screen and (min-device-width : 768px) and (max-device-width : 1024px)  {
+		margin-left: 20%;
+		@media (max-width: 1024px){
 			margin-left: 5%;
 			width: 90%;
 		}
-		@media only screen and (max-width: 767px), screen and (min-device-width : 320px) and (max-device-width : 767px) {
+		@media (max-width: 767px){
 			font-size: 2.5em;
 		}
 	}
@@ -55,7 +55,7 @@
 		text-align: center;
 		z-index: 1;
 		margin-top: 68px;
-		@media only screen and (max-width: 1024px), screen and (min-device-width : 768px) and (max-device-width : 1024px)  {
+		@media (max-width: 1024px){
 			display: none;
 		}
 
@@ -76,10 +76,11 @@
 
 				
 				.img-container{
+					box-sizing: border-box;
 					border: 5px solid black;
 					overflow: hidden !important;
-					width: 150px;
-					height: 150px;
+					width: 170px;
+					height: 170px;
 					text-align: center;
 					background-color: white;
 					@include vendorize(transform, rotate(-45deg));
@@ -126,7 +127,7 @@
 
 	.list-wrapper{
 		margin-bottom: 100px;
-		@media only screen and (max-width: 1024px), screen and (min-device-width : 768px) and (max-device-width : 1024px)  {
+		@media (max-width: 1024px){
 			width: 90%;
 			margin-left: 5%;
 		}
@@ -136,10 +137,10 @@
 
 	.author-hero-image{
 		display: none;
-		@media only screen and (max-width: 1024px), screen and (min-device-width : 768px) and (max-device-width : 1024px)  {
-			width: 90%;
+		@media (max-width: 1024px){
+			width: 40%;
 			height: auto;
-			margin-left: 5%;
+			margin-left: 30%;
 			margin-top:10px;
 			display: block;
 		}
@@ -153,14 +154,14 @@
 		margin-top: 88px;
 		font-size: 1.7em;
 		line-height: 1.5;
-		@media only screen and (max-width: 1024px), screen and (min-device-width : 768px) and (max-device-width : 1024px)  {
+		@media (max-width: 1024px){
 			width: 90%;
 			height: auto;
 			margin-left: 5%;
 			margin-top:10px;
 			display: block;
 		}
-		@media only screen and (max-width: 767px), screen and (min-device-width : 320px) and (max-device-width : 767px) {
+		@media (max-width: 767px){
 			font-size: 1.2em;
 		}
 	}
@@ -173,14 +174,14 @@
 		list-style-type: none;
 		padding: 0;
 		margin-bottom: 100px;
-		@media only screen and (max-width: 1024px), screen and (min-device-width : 768px) and (max-device-width : 1024px)  {
+		@media (max-width: 1024px){
 			width: 90%;
 			height: auto;
 			margin-left: 5%;
 			margin-top:10px;
 			display: block;
 		}
-		@media only screen and (max-width: 767px), screen and (min-device-width : 320px) and (max-device-width : 767px) {
+		@media (max-width: 767px){
 			font-size: 1.2em;
 			margin-bottom: 500px;
 		}
@@ -226,12 +227,19 @@
 
 
 					.item-image-wrapper{
-						width: 400px;
+						box-sizing: border-box;
+						width: 100%;
 						margin-top: 20px;
-						height: 400px;
+						height: 300px;
+						// height: 400px;
 						overflow: hidden;
 						border: 4px solid black;
 						text-align: center;
+						img{
+							text-align: center;
+							height: auto;
+							width: 100%;
+						}
 					}
 
 
@@ -271,115 +279,121 @@
 
 
 .sidebar{
-		position: absolute;
-		top: 280px;
-		left: 10px;
-		width: 17.0000003333%;
-		text-align: left;
-		@media only screen and (max-width: 1024px), screen and (min-device-width : 768px) and (max-device-width : 1024px)  {
-			display: none;		
-		}
+	position: absolute;
+	top: 280px;
+	left: 10px;
+	width: 17.0000003333%;
+	text-align: left;
+	@media (max-width: 1024px){
+		display: none;		
+	}
 		
-		a.topscroll{
-			text-decoration: none;
-			color: black;
+	a.topscroll{
+		text-decoration: none;
+		color: black;
+	}
+	h4{
+		margin: 0;
+	}
+	img{
+		max-width: 80%;
+		height: auto;
+		margin-left: 0;
+		margin-left: 20px;
+	}
+	.radio-picks-sidebar{
+		margin-left: 20px;
+		&:after{
+			content: ''
 		}
-		h4{
+	}
+	.author-sidebar{
+		margin-left: 20px;
+	}
+	.sidebar-list{
+		list-style-type: none;
+		padding: 0;
+		text-align: left;
+		margin-left: 20px;
+		a{
 			margin: 0;
-		}
-		img{
-			max-width: 80%;
-			height: auto;
-			margin-left: 0;
-			margin-left: 20px;
-		}
-		.radio-picks-sidebar{
-			margin-left: 20px;
-			&:after{
-				content: ''
-			}
-		}
-		.author-sidebar{
-			margin-left: 20px;
-		}
-		.sidebar-list{
-			list-style-type: none;
-			padding: 0;
-			text-align: left;
-			margin-left: 20px;
-			a{
+			text-decoration: none;
+			.sidebar-item{
+				padding: 5px;
 				margin: 0;
-				text-decoration: none;
-				.sidebar-item{
-					padding: 5px;
-					margin: 0;
-					font-size: 0.8em;
-					background-color: transparent;
-					color: black !important;
-					width: 80%;
-					.order{
-						width: 15px;
-						display: inline-block;
-						margin-right: 5px;
-						font-size: 0.7em;
-						text-align: center;
-						line-height: 15px;
-						height: 15px;
-						border: 2px solid black;
-						@include vendorize(border-radius, 50%);
-					}
+				font-size: 0.8em;
+				background-color: transparent;
+				color: black !important;
+				width: 80%;
+				.order{
+					width: 15px;
+					display: inline-block;
+					margin-right: 5px;
+					font-size: 0.7em;
+					text-align: center;
+					line-height: 15px;
+					height: 15px;
+					border: 2px solid black;
+					vertical-align: top;
+					@include vendorize(border-radius, 50%);
 				}
-				&:hover, &.active{
-					.sidebar-item{
-						background-color: black !important;
-						color: white !important;
-
-					}
-					
-					.order{
-						border: 2px solid white !important; 
-					}
-				}
-				&.active{
-					color: white;
+				.sidebar-title{
+					vertical-align: top;
+					width: 70%;
+					display: inline-block;
 				}
 			}
-		}
-		&.sticky{
-			position: fixed;
-			top: 20px;
-		}
-		.button-group{
-			box-sizing: border-box;
-			margin-left: 20px;
-			.button{
-				-webkit-font-smoothing: antialiased;
-				background-color: black;
-				border-radius: 0;
-				width: 35px;
-				height: 35px;
-				padding: 0;
-				font-size: 25px;
-				line-height: 25px;
-				display: inline-block;
-				text-align: center;
-				box-shadow: 1px 0px 0px #000000, 0px 1px 0px #000000, 2px 1px 0px #000000, 1px 2px 0px #000000, 3px 2px 0px #000000, 2px 3px 0px #000000, 4px 3px 0px #000000, 3px 4px 0px #000000, 5px 4px 0px #000000, 4px 5px 0px #000000, 6px 5px 0px #000000, 5px 6px 0px #000000, 7px 6px 0px #000000, 6px 7px 0px #000000, 8px 7px 0px #000000, 7px 8px 0px #000000, 9px 8px 0px #000000, 8px 9px 0px #000000;
-				transition: all .2s linear;
-				&:first-child{
-					margin-right: 10px;
+			&:hover, &.active{
+				.sidebar-item{
+					background-color: black !important;
+					color: white !important;
+
 				}
-				a{
-					color: white;
+					
+				.order{
+					border: 2px solid white !important; 
 				}
-				i{
-					padding: 5px;
-				}
-				&:hover{
-					@include vendorize(transform, translate(5px,5px));
-					@include vendorize(box-shadow, none);
-				}
+			}
+			&.active{
+				color: white;
 			}
 		}
 	}
+	&.sticky{
+		position: fixed;
+		top: 20px;
+	}
+	.button-group{
+		box-sizing: border-box;
+		margin-left: 20px;
+		.button{
+			-webkit-font-smoothing: antialiased;
+			background-color: black;
+			border-radius: 0;
+			width: 35px;
+			height: 35px;
+			padding: 0;
+			font-size: 25px;
+			line-height: 25px;
+			display: inline-block;
+			text-align: center;
+			box-shadow: 1px 0px 0px #000000, 0px 1px 0px #000000, 2px 1px 0px #000000, 1px 2px 0px #000000, 3px 2px 0px #000000, 2px 3px 0px #000000, 4px 3px 0px #000000, 3px 4px 0px #000000, 5px 4px 0px #000000, 4px 5px 0px #000000, 6px 5px 0px #000000, 5px 6px 0px #000000, 7px 6px 0px #000000, 6px 7px 0px #000000, 8px 7px 0px #000000, 7px 8px 0px #000000, 9px 8px 0px #000000, 8px 9px 0px #000000;
+			transition: all .2s linear;
+			&:first-child{
+				margin-right: 10px;
+			}
+			a{
+				color: white;
+			}
+			i{
+				padding: 5px;
+			}
+			&:hover{
+				@include vendorize(transform, translate(5px,5px));
+				@include vendorize(box-shadow, none);
+			}
+		}
+	}
+}
 
 
