--- a/css/feature-beast.scss
+++ b/css/feature-beast.scss
@@ -1,7 +1,7 @@
-@import '_mixins.scss';
-@import '_fonts.scss';
-@import '_globals.scss';
-@import '_index.scss';
-@import '_detail.scss';
+@import "_mixins.scss";
+@import "_fonts.scss";
+@import "_globals.scss";
+@import "_index.scss";
+@import "_detail.scss";
 
 
