--- a/css/_detail.scss
+++ b/css/_detail.scss
@@ -23,7 +23,9 @@
 			margin-left: 5%;
 		}
 		@media (max-width: 767px){
-			font-size: 1.5em;
+			font-size: 1em;
+			border-bottom: 2px solid black;
+			font-weight: lighter;
 		}
 
 
@@ -56,7 +58,7 @@
 		z-index: 1;
 		margin-top: 68px;
 		@media (max-width: 1024px){
-			display: none;
+			display: none !important;
 		}
 
 
@@ -162,7 +164,11 @@
 			display: block;
 		}
 		@media (max-width: 767px){
-			font-size: 1.2em;
+			font-size: 1em;
+			width: 95%;
+			margin-left: 2.5%;
+			margin-right: 2.5%;
+			line-height: 1.5;
 		}
 	}
 
@@ -184,6 +190,9 @@
 		@media (max-width: 767px){
 			font-size: 1.2em;
 			margin-bottom: 500px;
+			width: 95%;
+			margin-left: 2.5%;
+			margin-right: 2.5%;
 		}
 
 
@@ -198,8 +207,20 @@
 
 
 				.list-titles{
-					border-bottom: 5px solid black;
+					// border-bottom: 5px solid black;
 					margin: 0;
+					width: 100%;
+					position: relative;
+					display: block;
+					vertical-align: top;
+					&:after{
+						content: '';
+						height: 5px;
+						display: block;
+						margin-top: -15px;
+						background: black;
+						width: 100%;
+					}
 
 
 					.item-order{
@@ -208,17 +229,41 @@
 						text-align: center;
 						width: 20px;
 						line-height: 20px;
+						position: absolute;
+						top: 25px;
+						left: 0;
 						height: 20px;
 						border: 2px solid black;
+						vertical-align: middle;
 						@include vendorize(border-radius, 50%);
+						@media (max-width: 1024px){
+							top: 27px;
+						}
+						@media (max-width: 768px){
+							top: 20px;
+							text-align: center;
+							font-size: 0.6em;
+						}
+						@media (max-width: 568px){
+							top: 21px;
+						}
 					}
 
 
 					.item-title{
 						font-size: 1em;
+						width: 100%;
 						display: inline-block;
+						position: relative;
+						padding-left: 30px;
 						line-height: 20px;
-						margin-left: 50px;
+						margin-left: 0;
+						vertical-align: top;
+						@media (max-width: 768px){
+							font-size: 1.2em;
+							vertical-align: top;
+							margin-left: 0;
+						}
 					}
 				}
 
@@ -228,29 +273,40 @@
 
 					.item-image-wrapper{
 						box-sizing: border-box;
-						width: 100%;
-						margin-top: 20px;
-						height: 300px;
-						// height: 400px;
+						margin: 20px auto auto auto;
+						height: auto;
+						width: 400px;
+						height: 400px;
 						overflow: hidden;
 						border: 4px solid black;
 						text-align: center;
+						@media (max-width: 1024px){
+							width: 400px;
+							height: 400px;
+						}
+						@media (max-width: 768px){
+							width: 400px;
+							height: 400px;
+						}
+						@media (max-width: 568px){
+							width: 250px;
+							height: 250px;
+						}
 						img{
-							text-align: center;
-							height: auto;
-							width: 100%;
+							max-height: 100%;
+							width: auto;
 						}
 					}
 
 
-					img{
-						height: 100%;
-						width: auto;
-					}
 
 
 					p{
 						text-align: left;
+						@media (max-width: 767px){
+							font-size: 16px;
+							line-height: 1.5;
+						}
 
 
 						.video{
