--- a/css/_index.scss
+++ b/css/_index.scss
@@ -1,6 +1,8 @@
 .lists{
 	list-style-type: none;
-	text-align: center;
+	text-align: left;
+	width: 100%;
+	margin: 0;
 	li{
 		display: inline;
 		a{
