--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -68,11 +68,14 @@ body {
       min-height: 700px; } }
   @media (max-width: 767px) {
     .frame {
-      min-height: 700px; } }
+      height: 100%;
+      min-height: 767px; } }
 
 .lists {
   list-style-type: none;
-  text-align: center; }
+  text-align: left;
+  width: 100%;
+  margin: 0; }
   .lists li {
     display: inline; }
     .lists li a {
@@ -115,7 +118,9 @@ body {
         margin-left: 5%; } }
     @media (max-width: 767px) {
       .list-wrapper .rbma-radio-picks {
-        font-size: 1.5em; } }
+        font-size: 1em;
+        border-bottom: 2px solid black;
+        font-weight: lighter; } }
     .list-wrapper .rbma-radio-picks .title {
       margin: 0;
       padding: 0; }
@@ -140,7 +145,7 @@ body {
     margin-top: 68px; }
     @media (max-width: 1024px) {
       .list-wrapper .list-thumbs {
-        display: none; } }
+        display: none !important; } }
     .list-wrapper .list-thumbs li {
       display: inline-block;
       text-align: center;
@@ -227,7 +232,11 @@ body {
         display: block; } }
     @media (max-width: 767px) {
       .list-wrapper .intro {
-        font-size: 1.2em; } }
+        font-size: 1em;
+        width: 95%;
+        margin-left: 2.5%;
+        margin-right: 2.5%;
+        line-height: 1.5; } }
   .list-wrapper .list-items {
     width: 66.6666666666%;
     margin-left: 20%;
@@ -246,7 +255,10 @@ body {
     @media (max-width: 767px) {
       .list-wrapper .list-items {
         font-size: 1.2em;
-        margin-bottom: 500px; } }
+        margin-bottom: 500px;
+        width: 95%;
+        margin-left: 2.5%;
+        margin-right: 2.5%; } }
     .list-wrapper .list-items .list-item {
       padding: 0; }
       .list-wrapper .list-items .list-item .list-container {
@@ -254,41 +266,88 @@ body {
         height: auto;
         width: 100%; }
         .list-wrapper .list-items .list-item .list-container .list-titles {
-          border-bottom: 5px solid black;
-          margin: 0; }
+          margin: 0;
+          width: 100%;
+          position: relative;
+          display: block;
+          vertical-align: top; }
+          .list-wrapper .list-items .list-item .list-container .list-titles:after {
+            content: '';
+            height: 5px;
+            display: block;
+            margin-top: -15px;
+            background: black;
+            width: 100%; }
           .list-wrapper .list-items .list-item .list-container .list-titles .item-order {
             font-size: 0.5em;
             display: inline-block;
             text-align: center;
             width: 20px;
             line-height: 20px;
+            position: absolute;
+            top: 25px;
+            left: 0;
             height: 20px;
             border: 2px solid black;
+            vertical-align: middle;
             -o-border-radius: 50%;
             border-radius: 50%; }
+            @media (max-width: 1024px) {
+              .list-wrapper .list-items .list-item .list-container .list-titles .item-order {
+                top: 27px; } }
+            @media (max-width: 768px) {
+              .list-wrapper .list-items .list-item .list-container .list-titles .item-order {
+                top: 20px;
+                text-align: center;
+                font-size: 0.6em; } }
+            @media (max-width: 568px) {
+              .list-wrapper .list-items .list-item .list-container .list-titles .item-order {
+                top: 21px; } }
           .list-wrapper .list-items .list-item .list-container .list-titles .item-title {
             font-size: 1em;
+            width: 100%;
             display: inline-block;
+            position: relative;
+            padding-left: 30px;
             line-height: 20px;
-            margin-left: 50px; }
+            margin-left: 0;
+            vertical-align: top; }
+            @media (max-width: 768px) {
+              .list-wrapper .list-items .list-item .list-container .list-titles .item-title {
+                font-size: 1.2em;
+                vertical-align: top;
+                margin-left: 0; } }
         .list-wrapper .list-items .list-item .list-container .item-body .item-image-wrapper {
           -moz-box-sizing: border-box;
                box-sizing: border-box;
-          width: 100%;
-          margin-top: 20px;
-          height: 300px;
+          margin: 20px auto auto auto;
+          height: auto;
+          width: 400px;
+          height: 400px;
           overflow: hidden;
           border: 4px solid black;
           text-align: center; }
+          @media (max-width: 1024px) {
+            .list-wrapper .list-items .list-item .list-container .item-body .item-image-wrapper {
+              width: 400px;
+              height: 400px; } }
+          @media (max-width: 768px) {
+            .list-wrapper .list-items .list-item .list-container .item-body .item-image-wrapper {
+              width: 400px;
+              height: 400px; } }
+          @media (max-width: 568px) {
+            .list-wrapper .list-items .list-item .list-container .item-body .item-image-wrapper {
+              width: 250px;
+              height: 250px; } }
           .list-wrapper .list-items .list-item .list-container .item-body .item-image-wrapper img {
-            text-align: center;
-            height: auto;
-            width: 100%; }
-        .list-wrapper .list-items .list-item .list-container .item-body img {
-          height: 100%;
-          width: auto; }
+            max-height: 100%;
+            width: auto; }
         .list-wrapper .list-items .list-item .list-container .item-body p {
           text-align: left; }
+          @media (max-width: 767px) {
+            .list-wrapper .list-items .list-item .list-container .item-body p {
+              font-size: 16px;
+              line-height: 1.5; } }
           .list-wrapper .list-items .list-item .list-container .item-body p .video {
             position: relative;
             padding-bottom: 56.25%;
