--- a/partials/detail.html
+++ b/partials/detail.html
@@ -35,8 +35,8 @@
               <div class="sidebar-title">{{item.fields.title}}</div>
             </li></a></ul>
         <div class="button-group">
-          <div class="button"><a href="https://twitter.com/share?url={{feature.fields.rbmaUrl}}&amp;via=rbma&amp;text={{list.fields.title}}" target="blank"><i class="fa fa-twitter"></i></a></div>
-          <div class="button"><a href="https://www.facebook.com/sharer/sharer.php?u={{list.fields.rbma_url}}" target="blank"><i class="fa fa-facebook"></i></a></div>
+          <div class="button"><a href="https://twitter.com/share?url={{list.fields.parentRbmaUrl}}&amp;via=rbma&amp;text={{list.fields.title}}" target="blank"><i class="fa fa-twitter"></i></a></div>
+          <div class="button"><a href="https://www.facebook.com/sharer/sharer.php?u={{list.fields.parentRbmaUrl}}" target="blank"><i class="fa fa-facebook"></i></a></div>
         </div>
       </div>
     </div>
