--- a/partials/detail.jade
+++ b/partials/detail.jade
@@ -86,12 +86,12 @@ div(id="spinner")
 					
 					.button
 						
-						a(href="https://twitter.com/share?url={{feature.fields.rbmaUrl}}&via=rbma&text={{list.fields.title}}", target="blank")
+						a(href="https://twitter.com/share?url={{list.fields.parentRbmaUrl}}&via=rbma&text={{list.fields.title}}", target="blank")
 							
 							i(class="fa fa-twitter")
 					
 					.button
 						
-						a(href="https://www.facebook.com/sharer/sharer.php?u={{list.fields.rbma_url}}", target="blank")
+						a(href="https://www.facebook.com/sharer/sharer.php?u={{list.fields.parentRbmaUrl}}", target="blank")
 							
 							i(class="fa fa-facebook")
