--- a/css/_detail.scss
+++ b/css/_detail.scss
@@ -433,7 +433,7 @@
 			line-height: 25px;
 			display: inline-block;
 			text-align: center;
-			box-shadow: 1px 0px 0px #000000, 0px 1px 0px #000000, 2px 1px 0px #000000, 1px 2px 0px #000000, 3px 2px 0px #000000, 2px 3px 0px #000000, 4px 3px 0px #000000, 3px 4px 0px #000000, 5px 4px 0px #000000, 4px 5px 0px #000000, 6px 5px 0px #000000, 5px 6px 0px #000000, 7px 6px 0px #000000, 6px 7px 0px #000000, 8px 7px 0px #000000, 7px 8px 0px #000000, 9px 8px 0px #000000, 8px 9px 0px #000000;
+			@include smallboxy();
 			transition: all .2s linear;
 			&:first-child{
 				margin-right: 10px;
@@ -449,6 +449,50 @@
 				@include vendorize(box-shadow, none);
 			}
 		}
+	}
+}
+
+.mobile-share{
+	display: none;
+	.button-group{
+		box-sizing: border-box;
+		margin: 0;
+		.button{
+			-webkit-font-smoothing: antialiased;
+			background-color: black;
+			border-radius: 0;
+			width: 35px;
+			height: 35px;
+			padding: 0;
+			font-size: 25px;
+			line-height: 25px;
+			display: inline-block;
+			text-align: center;
+			@include smallboxy();
+			transition: all .1s linear;
+			a{
+				color: white;
+			}
+			i{
+				padding: 5px;
+			}
+			&:hover, &:active{
+				@include vendorize(transform, translate(5px,5px));
+				@include vendorize(box-shadow, none);
+			}
+		}
+	}
+	@media (max-width: 1025px){
+		display: inline-block;
+		position: relative;
+		margin: auto;
+		bottom: 0;
+		width: 50%;
+		margin-left: 25%;
+		margin-top: 20px;
+		margin-bottom: 20px;
+		box-sizing: border-box;
+		text-align: center;
 	}
 }
 
