--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -443,7 +443,7 @@ body {
       line-height: 25px;
       display: inline-block;
       text-align: center;
-      box-shadow: 1px 0px 0px #000000, 0px 1px 0px #000000, 2px 1px 0px #000000, 1px 2px 0px #000000, 3px 2px 0px #000000, 2px 3px 0px #000000, 4px 3px 0px #000000, 3px 4px 0px #000000, 5px 4px 0px #000000, 4px 5px 0px #000000, 6px 5px 0px #000000, 5px 6px 0px #000000, 7px 6px 0px #000000, 6px 7px 0px #000000, 8px 7px 0px #000000, 7px 8px 0px #000000, 9px 8px 0px #000000, 8px 9px 0px #000000;
+      box-shadow: 1px 0px 1px #4d4d4d, 0px 1px 0px #333333, 2px 1px 0px #4d4d4d, 1px 2px 0px #333333, 3px 2px 0px #4d4d4d, 2px 3px 0px #333333, 4px 3px 0px #4d4d4d, 3px 4px 0px #333333, 5px 4px 0px #4d4d4d, 4px 5px 0px #333333, 6px 5px 0px #4d4d4d, 5px 6px 0px #333333, 7px 6px 0px #4d4d4d, 6px 7px 0px #333333, 8px 7px 0px #4d4d4d, 7px 8px 0px #333333, 9px 8px 0px #4d4d4d;
       -webkit-transition: all .2s linear;
               transition: all .2s linear; }
       .sidebar .button-group .button:first-child {
@@ -459,3 +459,48 @@ body {
         -ms-box-shadow: none;
         -o-box-shadow: none;
         box-shadow: none; }
+
+.mobile-share {
+  display: none; }
+  .mobile-share .button-group {
+    -moz-box-sizing: border-box;
+         box-sizing: border-box;
+    margin: 0; }
+    .mobile-share .button-group .button {
+      -webkit-font-smoothing: antialiased;
+      background-color: black;
+      border-radius: 0;
+      width: 35px;
+      height: 35px;
+      padding: 0;
+      font-size: 25px;
+      line-height: 25px;
+      display: inline-block;
+      text-align: center;
+      box-shadow: 1px 0px 1px #4d4d4d, 0px 1px 0px #333333, 2px 1px 0px #4d4d4d, 1px 2px 0px #333333, 3px 2px 0px #4d4d4d, 2px 3px 0px #333333, 4px 3px 0px #4d4d4d, 3px 4px 0px #333333, 5px 4px 0px #4d4d4d, 4px 5px 0px #333333, 6px 5px 0px #4d4d4d, 5px 6px 0px #333333, 7px 6px 0px #4d4d4d, 6px 7px 0px #333333, 8px 7px 0px #4d4d4d, 7px 8px 0px #333333, 9px 8px 0px #4d4d4d;
+      -webkit-transition: all .1s linear;
+              transition: all .1s linear; }
+      .mobile-share .button-group .button a {
+        color: white; }
+      .mobile-share .button-group .button i {
+        padding: 5px; }
+      .mobile-share .button-group .button:hover, .mobile-share .button-group .button:active {
+        -webkit-transform: translate(5px, 5px);
+        -ms-transform: translate(5px, 5px);
+        transform: translate(5px, 5px);
+        -ms-box-shadow: none;
+        -o-box-shadow: none;
+        box-shadow: none; }
+  @media (max-width: 1025px) {
+    .mobile-share {
+      display: inline-block;
+      position: relative;
+      margin: auto;
+      bottom: 0;
+      width: 50%;
+      margin-left: 25%;
+      margin-top: 20px;
+      margin-bottom: 20px;
+      -moz-box-sizing: border-box;
+           box-sizing: border-box;
+      text-align: center; } }
