shrink text a bit

--- a/css/_detail.scss
+++ b/css/_detail.scss
@@ -396,6 +396,7 @@
 				.sidebar-title{
 					vertical-align: top;
 					width: 70%;
+					font-size: 0.8em;
 					display: inline-block;
 				}
 			}
