--- a/css/feature-beast.css
+++ b/css/feature-beast.css
@@ -341,6 +341,7 @@ body {
               height: 250px; } }
           .list-wrapper .list-items .list-item .list-container .item-body .item-image-wrapper img {
             max-height: 100%;
+            min-height: 100%;
             width: auto; }
         .list-wrapper .list-items .list-item .list-container .item-body p {
           text-align: left; }
